--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,5 @@
 {
-  "name": "PWA Leyson",
+  "name": "PWA Running",
   "short_name": "Leyson",
   "description": "Bienvenid@s :)",
   "background_color": "#66CDAA",
