--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
   "name": "PWA Running",
-  "short_name": "Leyson",
+  "short_name": "PWA",
   "description": "Bienvenid@s :)",
   "background_color": "#66CDAA",
   "theme_color": "#F0DB4F",
